<resources>
    <string name="app_name">CKeep</string>
    <string name="default_item_name">Default Item</string>
    <string name="hiden_item_login">*****</string>
    <string name="hiden_item_password">*****</string>
    <string name="item_login_text">Login:</string>
    <string name="item_password_text">Password:</string>
    <string name="enter_name_hint">Enter Account name</string>
    <string name="enter_login_hint">Enter login</string>
    <string name="enter_password_hint">Enter password</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="main_header">Saved accounts</string>
    <string name="yes_button_text">Yes</string>
    <string name="no_button_text">No</string>
    <string name="delete_dialog_text">Delete this Account?</string>
    <string name="pinCodeHeaderText">Please, enter encryption key</string>
    <string name="pinCodeHintText">This encryption key is used to encrypt and decrypt data, please do not forget it</string>
</resources>