<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/custom_dialog_background">

    <EditText
        android:id="@+id/itemNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_hint"
        android:textColorHint="@color/teal_100"
        android:textColor="@color/teal_600"/>

    <EditText
        android:id="@+id/itemLoginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_login_hint"
        android:textColorHint="@color/teal_100"
        android:textColor="@color/teal_600"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/itemPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password_hint"
        android:textColorHint="@color/teal_100"
        android:textColor="@color/teal_600"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_button_text"
            android:backgroundTint="@color/teal_500"
            android:textColor="@color/teal_50"/>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_button_text"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/teal_500"
            android:textColor="@color/teal_50"/>
    </LinearLayout>

</LinearLayout>
