<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="25dp"
    app:strokeWidth="5dp"
    app:strokeColor="@color/blue_gray_700"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/teal_500"
        android:padding="10dp"
        android:gravity="top">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/itemIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintLeft_toLeftOf="@id/mainLayout"
            app:layout_constraintTop_toTopOf="@id/mainLayout"
            app:layout_constraintRight_toLeftOf="@id/accountLayout"
            android:src="@drawable/default_item_icon"
            android:tint="@color/teal_50"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/accountLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@id/itemIcon"
            app:layout_constraintRight_toLeftOf="@id/itemDeleteButton"
            app:layout_constraintTop_toTopOf="@id/mainLayout"
            app:layout_constraintBottom_toBottomOf="@id/mainLayout"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/titleLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/accountName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_item_name"
                    android:textColor="@color/teal_50"
                    android:textSize="30sp"
                    android:gravity="start"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/itemDataShowButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/data_show_button_icon"
                    android:tint="@color/teal_50"
                    android:background="@color/color_transparent"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/loginLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/itemLoginText"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_login_text"
                    android:textColor="@color/teal_50"
                    android:textSize="15sp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/itemLoginData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal_50"
                    android:textSize="15sp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/passwordLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/itemPasswordText"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_password_text"
                    android:textColor="@color/teal_50"
                    android:textSize="15sp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/itemPasswordData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal_50"
                    android:textSize="15sp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/itemDeleteButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintRight_toRightOf="@id/mainLayout"
            app:layout_constraintBottom_toBottomOf="@id/mainLayout"
            app:layout_constraintLeft_toRightOf="@id/accountLayout"
            android:src="@drawable/delete_button_icon"
            android:tint="@color/teal_50"
            android:background="@color/color_transparent"
            android:layout_gravity="bottom"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>

